--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ lol
 </head>
 <body>
 <h1> Hello, World!</h1>
+<div class-'nav-bar'> Navbar element </div>
 <span> my first website </span>
 </body>
 </html>
